add new header and logo

--- a/main.css
+++ b/main.css
@@ -16,6 +16,12 @@ p {
   font-family: Arial
 }
 
+div {
+  background-color: darkcyan;
+  text-align: right;
+ }
+ 
+
 th, td {
   padding: 8px;
   text-align: left;
